--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2108,13 +2108,14 @@ body {
             box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
             // width: 360px;
-            height: 109px;
+            height: auto;
             display: flex;
             justify-content: center;
             align-items: center;
             width: 28%;
             .block_item {
                 margin: 0 30px;
+                height: 8em;
                 a {
                     color: $black;
                     line-height: 25px;
