--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -1017,6 +1017,7 @@
             max-width: 48%;
             p {
                 top: 70%;
+                line-height: 1 !important;
             }
         }
     }
@@ -1038,7 +1039,7 @@
             max-width: 47.5%;
             p {
                 top: 60%;
-                font-size: 12px !important;
+                font-size: 11px !important;
             }
         }
     }
