--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4239,4 +4239,9 @@ body {
         -ms-flex-align: center !important;
             align-items: center !important;
   }
+}
+@media (max-width: 410px) {
+  .search-button {
+    margin-left: 7px !important;
+  }
 }/*# sourceMappingURL=style.css.map */
