--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -1318,3 +1318,18 @@
     margin-left: 7px !important;
 }
 }
+// --------------------Информация по правам пациентов-----------------------
+@media(max-width: 767px) {
+.page_information_block {
+    .page_information_list {
+        span {
+            font-size: 14px !important;
+        }
+    }
+}
+}
+@media(max-width: 600px){
+    .slider_free_medical .slider__item img{
+        width:100% !important;
+    }
+}
