--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -1333,3 +1333,12 @@
         width:100% !important;
     }
 }
+@media(max-width: 392px) {
+    .page_information_block {
+        .page_information_list {
+            span {
+                font-size: 11px !important;
+            }
+        }
+    }
+}
