--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -389,7 +389,8 @@
         display: flex;
         // flex-direction: column;
         .contacts_text {
-            .contacts_line1, .contacts_line2 {
+            .contacts_line1,
+            .contacts_line2 {
                 div {
                     font-size: 15px !important;
                 }
@@ -405,7 +406,6 @@
         .contacts_departs {
             ul {
                 li {
-                    
                     a {
                         font-size: 15px !important;
                     }
@@ -484,7 +484,6 @@
     .text_bottom {
         font-size: 10px !important;
         line-height: normal !important;
-
     }
     .contacts_body {
         .contacts_text {
@@ -664,11 +663,9 @@
             display: none !important;
         }
     }
-   
     .cf_wrapper_mobil {
         display: block !important;
     }
-
     .header-card {
         padding: 10px !important;
         .card-img {
@@ -677,68 +674,42 @@
                 width: 100% !important;
                 height: auto !important;
             }
-
         }
         .card-text {
             margin-left: 10px !important;
             flex: 1;
-        } 
+        }
     }
-
-
     .info {
         font-size: 14px !important;
         line-height: normal !important;
     }
-
-    .important1_text, .important3_text {
+    .important1_text,
+    .important3_text {
         div {
             a {
                 font-size: 14px !important;
             }
         }
-    
     }
-
-
-
-
-
-
-
     .reviews_column {
         .reviews_item {
-        .reviews_item_title {
-            font-size: 14px !important;
-        }
-        }
-        }
-        .contact_form_title {
-            p {
-                font-size: 22px !important;
+            .reviews_item_title {
+                font-size: 14px !important;
             }
         }
-        .cf_wrapper_mobil {
-            .cf7_title {
-                
-                    font-size: 22px !important;
-               
-            }
+    }
+    .contact_form_title {
+        p {
+            font-size: 22px !important;
         }
+    }
+    .cf_wrapper_mobil {
+        .cf7_title {
+            font-size: 22px !important;
+        }
+    }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 // ----О больнице mobilka-----
 @media(max-width: 906px) {
@@ -824,13 +795,12 @@
 
 @media(max-width: 767px) {
     .administration_position {
-    .administration_position_text {
-        font-size: 14px !important;
-    }
-    
-    h4 {
-        font-size: 16px !important;
-    }
+        .administration_position_text {
+            font-size: 14px !important;
+        }
+        h4 {
+            font-size: 16px !important;
+        }
     }
 }
 
@@ -865,16 +835,16 @@
     }
     .administration_paycheck {
         gap: 8px !important;
-    .administration_paycheck_item {
-        // height: 72px !important;
-        .block_item {
-            margin: 0 15px !important;
-        a {
-            font-size: 10px !important;
-            line-height: 15px !important;
+        .administration_paycheck_item {
+            // height: 72px !important;
+            .block_item {
+                margin: 0 15px !important;
+                a {
+                    font-size: 10px !important;
+                    line-height: 15px !important;
+                }
+            }
         }
-    }
-    }
     }
     .administration_title {
         font-size: 35px;
@@ -1101,7 +1071,6 @@
 //         }
 //     }
 // }
-
 // 
 // ----------Отзывы----------
 @media(max-width: 630px) {
@@ -1161,11 +1130,11 @@
 
 @media(max-width: 767px) {
     .page_information_title {
-        font-size: 40px !important;
+        font-size: 28px !important;
         line-height: normal !important;
     }
     .page_information_subtitle {
-        font-size: 25px !important;
+        font-size: 22px !important;
         line-height: normal !important;
     }
 }
@@ -1313,26 +1282,29 @@
     }
 }
 
-@media(max-width: 410px) {
-.search-button {
-    margin-left: 7px !important;
+@media(max-width: 525px) {
+    .search-button {
+        margin-left: 7px !important;
+    }
 }
-}
+
 // --------------------Информация по правам пациентов-----------------------
 @media(max-width: 767px) {
-.page_information_block {
-    .page_information_list {
-        span {
-            font-size: 14px !important;
+    .page_information_block {
+        .page_information_list {
+            span {
+                font-size: 14px !important;
+            }
         }
     }
 }
-}
-@media(max-width: 600px){
-    .slider_free_medical .slider__item img{
-        width:100% !important;
+
+@media(max-width: 600px) {
+    .slider_free_medical .slider__item img {
+        width: 100% !important;
     }
 }
+
 @media(max-width: 392px) {
     .page_information_block {
         .page_information_list {
@@ -1340,5 +1312,57 @@
                 font-size: 11px !important;
             }
         }
+    }
+}
+
+@media(max-width: 560px) {
+    .administration_other_desk {
+        display: none !important;
+    }
+    .administration_other_mob {
+        display: block !important;
+    }
+    .administration_position_text {
+        padding-left: 15px;
+        line-height: 1.2;
+    }
+    .administration_position_title {
+        font-size: 16px;
+        margin-top: 28px !important;
+    }
+    .administration_position_image {
+        img {
+            width: 68px !important;
+        }
+    }
+    .admin_desk_main {
+        display: none;
+    }
+    .admin_mob_main {
+        display: block;
+    }
+    .administration_main {
+        margin-bottom: 0px !important;
+    }
+    .administration_text {
+        font-size: 14px;
+        padding-left: 15px;
+        padding-bottom: 15px;
+        line-height: 1.3;
+    }
+    h4 {
+        font-size: 16px !important;
+        line-height: normal !important;
+    }
+    .administration_main_image {
+        img {
+            width: 68px !important;
+        }
+    }
+}
+
+@media(max-width: 500px) {
+    .administration_position_title {
+        margin-top: 10px !important;
     }
 }
