--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2123,14 +2123,38 @@ body {
   max-width: 1042px;
 }
 
+.admin_mob_main {
+  display: none;
+}
+
+.administration_other_mob {
+  display: none !important;
+}
+
+.administration_text {
+  margin: 0 10px 20px 0;
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  color: #ffffff;
+}
+.administration_text .admin_contact_information {
+  font-weight: 400;
+}
+
+.administration_main_main {
+  background: -webkit-gradient(linear, left top, left bottom, from(#51ACB5), color-stop(52.08%, #45A6AF), to(#00616A));
+  background: linear-gradient(180deg, #51ACB5 0%, #45A6AF 52.08%, #00616A 100%);
+}
+
 .administration_container .administration_title {
   margin: 28px 0;
   color: #013236;
 }
 .administration_container .administration_main {
   margin-bottom: 32px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#51ACB5), color-stop(52.08%, #45A6AF), to(#00616A));
-  background: linear-gradient(180deg, #51ACB5 0%, #45A6AF 52.08%, #00616A 100%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3477,7 +3501,8 @@ body {
     display: -ms-flexbox;
     display: flex;
   }
-  .contacts_body .contacts_text .contacts_line1 div, .contacts_body .contacts_text .contacts_line2 div {
+  .contacts_body .contacts_text .contacts_line1 div,
+.contacts_body .contacts_text .contacts_line2 div {
     font-size: 15px !important;
   }
   .contacts_body .contacts_text .contacts_line3 div a {
@@ -3740,7 +3765,8 @@ body {
     font-size: 14px !important;
     line-height: normal !important;
   }
-  .important1_text div a, .important3_text div a {
+  .important1_text div a,
+.important3_text div a {
     font-size: 14px !important;
   }
   .reviews_column .reviews_item .reviews_item_title {
@@ -4063,11 +4089,11 @@ body {
 }
 @media (max-width: 767px) {
   .page_information_title {
-    font-size: 40px !important;
+    font-size: 28px !important;
     line-height: normal !important;
   }
   .page_information_subtitle {
-    font-size: 25px !important;
+    font-size: 22px !important;
     line-height: normal !important;
   }
 }
@@ -4240,7 +4266,7 @@ body {
             align-items: center !important;
   }
 }
-@media (max-width: 410px) {
+@media (max-width: 525px) {
   .search-button {
     margin-left: 7px !important;
   }
@@ -4258,5 +4284,51 @@ body {
 @media (max-width: 392px) {
   .page_information_block .page_information_list span {
     font-size: 11px !important;
+  }
+}
+@media (max-width: 560px) {
+  .administration_other_desk {
+    display: none !important;
+  }
+  .administration_other_mob {
+    display: block !important;
+  }
+  .administration_position_text {
+    padding-left: 15px;
+    line-height: 1.2;
+  }
+  .administration_position_title {
+    font-size: 16px;
+    margin-top: 28px !important;
+  }
+  .administration_position_image img {
+    width: 68px !important;
+  }
+  .admin_desk_main {
+    display: none;
+  }
+  .admin_mob_main {
+    display: block;
+  }
+  .administration_main {
+    margin-bottom: 0px !important;
+  }
+  .administration_text {
+    font-size: 14px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+    line-height: 1.3;
+  }
+  h4 {
+    font-size: 16px !important;
+    line-height: normal !important;
+  }
+  .administration_main_image img {
+    width: 68px !important;
+  }
+}
+@media (max-width: 500px) {
+  .administration_position_title {
+    margin-top: 10px !important;
   }
 }/*# sourceMappingURL=style.css.map */
