--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -9,7 +9,7 @@
                 .logo_text-link,
                 .header_phone i,
                 .header_phone-link,
-                .visually_impaired-link {
+                .bvi-open {
                     font-size: 16px;
                 }
                 .header_phone,
